<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".VIEW.Lever">

    <Button
        android:id="@+id/btn_back3"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:background="@drawable/back_edit"
        app:backgroundTint="@null"
        app:icon="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_easy"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_easy"
        android:text="@string/de"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_medium"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_edit"
        android:text="@string/trung_b_nh"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/btn_difficult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_easy"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btn_difficult"
        android:layout_width="174dp"
        android:layout_height="55dp"
        android:background="@drawable/btn_difficult"
        android:text="@string/kh"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_medium"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>